--- a/codigo/public/assets/css/saibamais.css
+++ b/codigo/public/assets/css/saibamais.css
@@ -118,8 +118,6 @@
   .sobre {
     font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
-    padding-left: 50px;
-    padding-right: 50px;
   }
 
   #sobreprojeto{
@@ -131,4 +129,13 @@
     margin-bottom: 50px;
   }
 
+ #avaliacao{
+  background-color: #00603A;
+ }
+
+ @media (max-width: 768px){
+#avaliacao{
+  margin-bottom: 10%;
+}
+ }
 /*         SOBRE        */
