--- a/codigo/public/assets/css/cadastro.css
+++ b/codigo/public/assets/css/cadastro.css
@@ -35,6 +35,26 @@ input{
     border-radius: 10px;
     box-shadow: 0px 10px 40px #0f0f0f56 ;
 }
+#divgenero{
+    display: flex;
+    margin: 10px auto;
+    width: 270px;
+    height: 50px;
+    outline: none;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 10px 40px #0f0f0f56 ;
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+}
+
+#nascimento{
+    display: flex;
+    justify-content: center;
+}
+
+
 button{
     background-color: lightgrey;
     width: 270px;
