PÁGINA DE MEUS TORNEIOS DO ESTABELECIMENTO
NAV MUDOU OS BOTÕES, AGORA É HREF EM VEZ DE JAVASCRIPT :)

--- a/codigo/public/assets/css/estabelecimento.css
+++ b/codigo/public/assets/css/estabelecimento.css
@@ -229,3 +229,15 @@ nav {
     margin-top: 32px;
   }
 }
+
+.card-body{
+  background-color: #00603A;
+    border-radius: 5px;
+}
+
+ul li{
+list-style: none;
+color: white;
+padding: 10px;
+
+}
