--- a/codigo/public/assets/css/home.css
+++ b/codigo/public/assets/css/home.css
@@ -1,9 +1,13 @@
 
 /*         CARDS         */
+.card{
+  min-width: 100px;
+}
 
 .card-body{
     background-color: #00603A;
       border-radius: 5px;
+      
 }
 
 ul li{
@@ -11,5 +15,10 @@ ul li{
   color: white;
   padding: 10px;
   
+}
+
+.botaoParticipar{
+ min-width: fit-content;
+ max-width: fit-content;
 }
 
