--- a/codigo/public/assets/css/estabelecimento.css
+++ b/codigo/public/assets/css/estabelecimento.css
@@ -230,9 +230,12 @@ nav {
   }
 }
 
+
+
 .card-body{
   background-color: #00603A;
     border-radius: 5px;
+    min-width: 200px;
 }
 
 ul li{
@@ -241,3 +244,8 @@ color: white;
 padding: 10px;
 
 }
+
+.botaoParticipar{
+  min-width: fit-content;
+  max-width: fit-content;
+ }
